# Rust-101

./: Readme.md
day-1/: Cargo.toml  Readme.md
day-1/src/: main.rs
day-10/: Readme.md
day-10/src/: main.rs
day-11/: Readme.md
day-11/src/: main.rs
day-12/: Readme.md
day-12/src/: main.rs
day-13/: Readme.md
day-13/src/: main.rs
day-14/: Readme.md
day-15/src/: main.rs
day-16/: Readme.md
day-16/src/: main.rs
day-17/: Readme.md
day-17/src/: main.rs
day-18/: Readme.md
day-18/src/: main.rs
day-2/: Readme.md
day-2/src/: main.rs
day-3/: Cargo.toml  Readme.md
day-3/src/: main.rs
day-4/: Cargo.toml  Readme.md
day-4/src/: main.rs
day-5/: Cargo.toml  Readme.md
day-5/src/: main.rs
day-6/: Cargo.toml
day-6/src/: main.rs
day-7/: Cargo.toml  Readme.md
day-7/src/: main.rs
day-8/: Cargo.toml  Readme.md
day-8/src/: main.rs
day-9/: Cargo.toml  Readme.md
day-9/src/: main.rs
project-1/: Cargo.toml  Readme.md  compressedfile
project-1/src/: main.rs
project-10/: Cargo.toml
project-10/src/: main.rs
project-11/: Cargo.toml
project-11/src/: main.rs
project-12/: Cargo.toml  Readme.md
project-12/src/: add.rhai  main.rs  multiply.rhai
project-13/: Cargo.toml
project-13/src/: main.rs
project-14/: Cargo.toml
project-15/: Cargo.toml  passwords.json
project-16/: Cargo.toml
project-2/: Cargo.toml  Readme.md
project-3/: Cargo.toml  random.csv
project-4/: Cargo.toml
project-5/: Cargo.toml
project-6/: Cargo.toml
project-7/: Cargo.toml
project-7/src/: main.rs
project-8/: Cargo.toml
project-9/: Cargo.toml
(+14 files in other folders)
