[package]
name = "project-7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
error-chain = "0.12.4"
tokio = { version = "0.2.3", features = ["full"] }